test: [CO-2555] update legacy tests - pt2 (#818)
* chore: extend ContactRankingTestTest to inherit from MailboxTestSuite

* refactor: extend RejectTest to inherit from MailboxTestSuite and improve test structure

* refactor: extend RuleManagerTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend TagTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend LinkedInTestTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend SetVariableTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend FlaggedTestTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend ExistingMessageHandlerTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend ConversationTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend ErejectTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend ZimbraMailAdapterTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend GetFilterRulesTest to inherit from MailboxTestSuite for improved test structure

* refactor: simplify SpamTest

* refactor: extend RelationalExtensionTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend FlagTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend ImportanceTestTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend BodyTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend HeaderTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend FilterUtilTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend RuleManagerWithCustomActionFilterTest to inherit from MailboxTestSuite for improved test structure

* refactor: extend FacebookTestTest to inherit from MailboxTestSuite for improved te